--- a/Src/AgileManifestoWidget/app/dashboard-widget.html
+++ b/Src/AgileManifestoWidget/app/dashboard-widget.html
@@ -8,25 +8,110 @@
 </head>
 <body style="background-color: aliceblue">
     <div class="widget">
-        <h2 class="title">Your Widget Title</h2>
         <div class="content">
-            To create your widget follow the official Microsoft documentation <a href="https://docs.microsoft.com/en-us/vsts/extend/?view=vsts
-" target="_blank">here</a> and <a href="https://docs.microsoft.com/en-us/vsts/extend/develop/add-dashboard-widget?view=vsts" target="_blank">here</a>, but it essentially boils down to the following steps:
-                <ol>
-                    <li>
-                        Edit the html and assets
-                    </li>
-                    <li>
-                        Edit the vss-extension.json <a href="https://docs.microsoft.com/en-us/vsts/extend/develop/manifest?view=vsts" target="_blank">manifest file</a>
-                    </li>
-                    <li>
-                        <a href="https://docs.microsoft.com/en-us/vsts/extend/publish/overview?view=vsts" target="_blank">Package/publish</a> the widget (privately or publicly)
-                    </li>
-                    <li>
-                        Optionally <a href="https://marketplace.visualstudio.com/items?itemName=GregTrevellick.VstsDashboardWidgetProjectTemplate" target="_blank">rate</a> this project template extension
-                    </li>
-                </ol>
-            Thank you and good luck!
+            <center>
+                <!--<br><br><br><br>
+                <h1>
+                    Manifesto for Agile Software Development
+                </h1>
+                <br><br><br>
+                <p>
+                    <font size="+2">
+                        We are uncovering better ways of developing
+                        <br>
+                        software by doing it and helping others do it.
+                        <br>
+                        Through this work we have come to value:
+                        <br>
+                    </font>
+                </p>-->
+                <h2 class="title">The Agile Manifesto</h2>
+                <p>
+                    <font size="+3">
+                        Individuals and interactions
+                    </font>
+                    <font size="+2">
+                        over processes and tools<br>
+                    </font>
+                    <font size="+3">
+                        Working software
+                    </font>
+                    <font size="+2">
+                        over comprehensive documentation
+                        <br>
+                    </font>
+                    <font size="+3">
+                        Customer collaboration
+                    </font>
+                    <font size="+2">
+                        over contract negotiation
+                        <br>
+                    </font>
+                    <font size="+3">
+                        Responding to change
+                    </font>
+                    <font size="+2">
+                        over following a plan
+                        <br>
+                    </font>
+                </p>
+                <p>
+                    <font size="+2">
+                        That is, while there is value in the items on
+                        <br>
+                        the right, we value the items on the left more.
+                        <br>
+                    </font>
+                    <!--<br><br><br><br>
+                    <table cellpadding="15">
+                        <tbody>
+                            <tr align="center" valign="top">
+                                <td>
+                                    <font size="+2">
+                                    </font>
+                                </td>
+                                <td>
+                                    <font size="+2">
+                                        Kent Beck<br>
+                                        Mike Beedle<br>
+                                        Arie van Bennekum<br>
+                                        Alistair Cockburn<br>
+                                        Ward Cunningham<br>
+                                        Martin Fowler<br>
+                                    </font>
+                                </td>
+                                <td>
+                                    <font size="+2">
+
+                                        James Grenning<br>
+                                        Jim Highsmith<br>
+                                        Andrew Hunt<br>
+                                        Ron Jeffries<br>
+                                        Jon Kern<br>
+                                        Brian Marick<br>
+                                    </font>
+                                </td>
+                                <td>
+                                    <font size="+2">
+                                        Robert C. Martin<br>
+                                        Steve Mellor<br>
+                                        Ken Schwaber<br>
+                                        Jeff Sutherland<br>
+                                        Dave Thomas<br>
+                                    </font>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <br><br><br>
+                    <font size="1" color="gray">
+                        © 2001, the above authors<br>
+                        this declaration may be freely copied in any form, <br>
+                        but only in its entirety through this notice.
+                    </font>-->
+                </p>
+                <a href="https://agilemanifesto.org/" target="_blank">More information</a>
+            </center>
         </div>
     </div>
 </body>
