--- a/Src/AgileManifestoWidget/app/dashboard-widget.html
+++ b/Src/AgileManifestoWidget/app/dashboard-widget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>My Incredible Widget</title>
+    <title>The Agile Manifesto</title>
     <link href="Content/site.css" rel="stylesheet" />
     <script src="Scripts/SDK/VSS.SDK.min.js"></script>
     <script src="Scripts/app.js"></script>
@@ -10,107 +10,22 @@
     <div class="widget">
         <div class="content">
             <center>
-                <!--<br><br><br><br>
-                <h1>
-                    Manifesto for Agile Software Development
-                </h1>
-                <br><br><br>
-                <p>
-                    <font size="+2">
-                        We are uncovering better ways of developing
-                        <br>
-                        software by doing it and helping others do it.
-                        <br>
-                        Through this work we have come to value:
-                        <br>
-                    </font>
-                </p>-->
                 <h2 class="title">The Agile Manifesto</h2>
                 <p>
-                    <font size="+3">
-                        Individuals and interactions
-                    </font>
-                    <font size="+2">
-                        over processes and tools<br>
-                    </font>
-                    <font size="+3">
-                        Working software
-                    </font>
-                    <font size="+2">
-                        over comprehensive documentation
-                        <br>
-                    </font>
-                    <font size="+3">
-                        Customer collaboration
-                    </font>
-                    <font size="+2">
-                        over contract negotiation
-                        <br>
-                    </font>
-                    <font size="+3">
-                        Responding to change
-                    </font>
-                    <font size="+2">
-                        over following a plan
-                        <br>
-                    </font>
+                    <span style="font-size:x-large">Individuals and interactions</span>&nbsp;over processes and tools
+                    <br>
+                    <span style="font-size:x-large">Working software</span>&nbsp;over comprehensive documentation
+                    <br>
+                    <span style="font-size:x-large">Customer collaboration</span>&nbsp;over contract negotiation
+                    <br>
+                    <span style="font-size:x-large">Responding to change</span>&nbsp;over following a plan
+                    <br>
                 </p>
-                <p>
-                    <font size="+2">
-                        That is, while there is value in the items on
-                        <br>
-                        the right, we value the items on the left more.
-                        <br>
-                    </font>
-                    <!--<br><br><br><br>
-                    <table cellpadding="15">
-                        <tbody>
-                            <tr align="center" valign="top">
-                                <td>
-                                    <font size="+2">
-                                    </font>
-                                </td>
-                                <td>
-                                    <font size="+2">
-                                        Kent Beck<br>
-                                        Mike Beedle<br>
-                                        Arie van Bennekum<br>
-                                        Alistair Cockburn<br>
-                                        Ward Cunningham<br>
-                                        Martin Fowler<br>
-                                    </font>
-                                </td>
-                                <td>
-                                    <font size="+2">
-
-                                        James Grenning<br>
-                                        Jim Highsmith<br>
-                                        Andrew Hunt<br>
-                                        Ron Jeffries<br>
-                                        Jon Kern<br>
-                                        Brian Marick<br>
-                                    </font>
-                                </td>
-                                <td>
-                                    <font size="+2">
-                                        Robert C. Martin<br>
-                                        Steve Mellor<br>
-                                        Ken Schwaber<br>
-                                        Jeff Sutherland<br>
-                                        Dave Thomas<br>
-                                    </font>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <br><br><br>
-                    <font size="1" color="gray">
-                        © 2001, the above authors<br>
-                        this declaration may be freely copied in any form, <br>
-                        but only in its entirety through this notice.
-                    </font>-->
+                <p style="font-style:italic">
+                    That is, while there is value in the items on<br>
+                    the right, we value the items on the left more.<br>
                 </p>
-                <a href="https://agilemanifesto.org/" target="_blank">More information</a>
+                <a href="https://agilemanifesto.org/" target="_blank"><p style="font-size:smaller">more info</p></a>
             </center>
         </div>
     </div>
