--- a/Src/AgileManifestoWidget/app/dashboard-widget.html
+++ b/Src/AgileManifestoWidget/app/dashboard-widget.html
@@ -6,7 +6,8 @@
     <script src="Scripts/SDK/VSS.SDK.min.js"></script>
     <script src="Scripts/app.js"></script>
 </head>
-<body style="background-color: aliceblue">
+<!--<body style="background-color: aliceblue">-->
+<body>
     <div class="widget">
         <div class="content">
             <center>
