--- a/Src/AgileManifestoWidget/app/dashboard-widget.html
+++ b/Src/AgileManifestoWidget/app/dashboard-widget.html
@@ -11,7 +11,7 @@
     <div class="widget">
         <div class="content">
             <center>
-                <h2 class="title">The Agile Manifesto</h2>
+                <h2 class="title">The Agile Manifesto 222</h2>
                 <p>
                     <span style="font-size:x-large">Individuals and interactions</span>&nbsp;over processes and tools
                     <br>
