--- a/Src/AgileManifestoWidget/app/configuration.html
+++ b/Src/AgileManifestoWidget/app/configuration.html
@@ -3,7 +3,7 @@
 <head>
     <title>The Agile Manifesto Configuration</title>
     <script src="Scripts/SDK/VSS.SDK.min.js"></script>
-    <script src="Scripts/configuration222.js"></script>
+    <script src="Scripts/configuration.js"></script>
 </head>
 <body>
     <div class="container">
