--- a/Src/AgileManifestoWidget/app/dashboard-widget.html
+++ b/Src/AgileManifestoWidget/app/dashboard-widget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>If Covid-19 kills you, you're gonna die alone.</title>
+    <title>The Agile Manifesto</title>
     <link href="Content/site.css" rel="stylesheet" />
     <script src="Scripts/SDK/VSS.SDK.min.js"></script>
     <script src="Scripts/app.js"></script>
@@ -11,7 +11,7 @@
     <div class="widget">
         <div class="content">
             <center>
-                <h2 class="title">If Covid-19 kills you, you're gonna die alone</h2>
+                <h2 class="title">The Agile Manifesto</h2>
                 <p>
                     <span style="font-size:x-large">Individuals and interactions</span>&nbsp;over processes and tools
                     <br>
@@ -26,7 +26,7 @@
                     That is, while there is value in the items on<br>
                     the right, we value the items on the left more.<br>
                 </p>
-                <a href="https://Covid.org/" target="_blank"><p style="font-size:smaller">more info</p></a>
+                <a href="https://agilemanifesto.org/" target="_blank"><p style="font-size:smaller">more info</p></a>
             </center>
         </div>
     </div>
